[gd_scene load_steps=6 format=3 uid="uid://dpuuldt8lwc0p"]

[ext_resource type="Texture2D" uid="uid://ddmhcjcohjhbk" path="res://Asset/GameUI.png" id="1_a8bxb"]
[ext_resource type="Theme" uid="uid://dnf5p8ny2pgfo" path="res://Scenes/Inventory/theme.tres" id="1_y6rj1"]
[ext_resource type="Script" path="res://Scenes/Inventory/UpgradeMenu/upgrade_container.gd" id="2_i2sxw"]
[ext_resource type="Texture2D" uid="uid://dr2c4ctdxugao" path="res://Scenes/Inventory/Asset/Armor Piercing.png" id="3_dea6g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pnbjg"]
atlas = ExtResource("1_a8bxb")
region = Rect2(160, 144, 80, 112)

[node name="UpgradeContainer" type="NinePatchRect"]
custom_minimum_size = Vector2(280, 600)
offset_right = 280.0
offset_bottom = 600.0
theme = ExtResource("1_y6rj1")
texture = SubResource("AtlasTexture_pnbjg")
script = ExtResource("2_i2sxw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 49.0
offset_right = 250.0
offset_bottom = 532.0
theme_override_constants/separation = 20

[node name="ItemTexture" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("3_dea6g")
expand_mode = 5
stretch_mode = 5

[node name="ItemNameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Armor Piecing"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="StatLabelContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Stat1Label" type="Label" parent="VBoxContainer/StatLabelContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Attack +20"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Stat2Label" type="Label" parent="VBoxContainer/StatLabelContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Piece +2"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BtnSelect" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
focus_mode = 0
text = "Select"
